chore: change get latest tag logic

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -32,8 +32,9 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: fetch latest tag
-        uses: actions-ecosystem/action-get-latest-tag@v1
+      - name: fetch latest stable tag
+        run: |
+          echo "::set-output name=LATEST_TAG::$(git describe --exclude "*rc" --exclude "*list" --exclude "*alpha" --abbrev=0 --tags)"
         id: get-latest-tag
 
       - name: update templates alpha tag
@@ -59,7 +60,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           WITH_V: true
           DEFAULT_BUMP: ${{ github.event.inputs.bump-type }}
-          INITIAL_VERSION: ${{ steps.get-latest-tag.outputs.tag }}
+          INITIAL_VERSION: ${{ steps.get-latest-tag.outputs.LATEST_TAG }}
           RELEASE_BRANCHES: release
         id: bump-version
 
