chore: add description for bump type

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,7 +8,7 @@ on:
         required: true
         default: "rc"
       bump-type:
-        description: "bump type"
+        description: "bump type(major, minor, patch)"
         required: true
         default: "patch"
   schedule:
