--- a/adaptive-card-notification/.vscode/launch.json
+++ b/adaptive-card-notification/.vscode/launch.json
@@ -70,7 +70,7 @@
                 "Launch Bot (Edge)",
                 "Attach to Bot"
             ],
-            "preLaunchTask": "Pre Debug Check & Start All",
+            "preLaunchTask": "Start Teams App Locally",
             "presentation": {
                 "group": "all",
                 "order": 1
@@ -83,7 +83,7 @@
                 "Launch Bot (Chrome)",
                 "Attach to Bot"
             ],
-            "preLaunchTask": "Pre Debug Check & Start All",
+            "preLaunchTask": "Start Teams App Locally",
             "presentation": {
                 "group": "all",
                 "order": 2
