--- a/command-bot-with-sso/.vscode/launch.json
+++ b/command-bot-with-sso/.vscode/launch.json
@@ -71,7 +71,7 @@
                 "Launch Bot (Edge)",
                 "Attach to Bot"
             ],
-            "preLaunchTask": "Pre Debug Check & Start All",
+            "preLaunchTask": "Start Teams App Locally",
             "presentation": {
                 "group": "all",
                 "order": 1
@@ -84,7 +84,7 @@
                 "Launch Bot (Chrome)",
                 "Attach to Bot"
             ],
-            "preLaunchTask": "Pre Debug Check & Start All",
+            "preLaunchTask": "Start Teams App Locally",
             "presentation": {
                 "group": "all",
                 "order": 2
