--- a/hello-world-tab-without-sso/.vscode/launch.json
+++ b/hello-world-tab-without-sso/.vscode/launch.json
@@ -52,7 +52,7 @@
             "configurations": [
                 "Attach to Frontend (Edge)"
             ],
-            "preLaunchTask": "Pre Debug Check & Start All",
+            "preLaunchTask": "Start Teams App Locally",
             "presentation": {
                 "group": "all",
                 "order": 1
@@ -64,7 +64,7 @@
             "configurations": [
                 "Attach to Frontend (Chrome)"
             ],
-            "preLaunchTask": "Pre Debug Check & Start All",
+            "preLaunchTask": "Start Teams App Locally",
             "presentation": {
                 "group": "all",
                 "order": 2
