--- a/todo-list-with-Azure-backend/.vscode/launch.json
+++ b/todo-list-with-Azure-backend/.vscode/launch.json
@@ -71,7 +71,7 @@
                 "Attach to Frontend (Edge)",
                 "Attach to Backend"
             ],
-            "preLaunchTask": "Pre Debug Check & Start All",
+            "preLaunchTask": "Start Teams App Locally",
             "presentation": {
                 "group": "all",
                 "order": 1
@@ -84,7 +84,7 @@
                 "Attach to Frontend (Chrome)",
                 "Attach to Backend"
             ],
-            "preLaunchTask": "Pre Debug Check & Start All",
+            "preLaunchTask": "Start Teams App Locally",
             "presentation": {
                 "group": "all",
                 "order": 2
