--- a/stocks-update-notification-bot-dotnet/StocksUpdateNotificationBot/Properties/launchSettings.json
+++ b/stocks-update-notification-bot-dotnet/StocksUpdateNotificationBot/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "commandLineArgs": "host start --port 5130 --pause-on-error",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
-      "launchUrl": "https://teams.microsoft.com/l/app/d1d85760-66a7-4d20-bb3e-36d8fce28c2f?installAppPackage=true&webjoin=true&appTenantId=560b685f-2d5e-4266-976b-0f2b2dd819ce&login_hint=admin@M365x94132455.onmicrosoft.com",
+      "launchUrl": "https://teams.microsoft.com/l/app/%TEAMSAPPID%?installAppPackage=true&webjoin=true&appTenantId=%TENANTID%&login_hint=%USERNAME%",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "TEAMSFX_NOTIFICATION_LOCALSTORE_DIR": "../../.." // Path to project folder $(MSBuildProjectDirectory)
