--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -4,9 +4,9 @@ on:
   workflow_dispatch:
     inputs:
       preid:
-        description: "preid name(rc, stable)"
+        description: "use(rc, stable) on release branch, use alpha on dev branch"
         required: true
-        default: "rc"
+        default: "alpha"
       bump-type:
         description: "bump type(major, minor, patch)"
         required: true
@@ -17,15 +17,20 @@ jobs:
   cd:
     runs-on: ubuntu-latest
     steps:
-      - name: Validate alpha release
+      - name: Validate shcedule run on dev branch
         if: ${{ github.event_name == 'schedule' && github.ref != 'refs/heads/dev' }}
         run: |
           echo It's not allowed to run schedule release except dev branch.
           exit 1
-      - name: Validate rc and stable release
-        if: ${{ github.event_name == 'workflow_dispatch'&& github.ref != 'refs/heads/release' }}
+      - name: Validate preid on release branch
+        if: ${{ github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/release' && github.event.inputs.preid != 'rc' && github.event.inputs.preid != 'stable' }}
         run: |
-          echo It's not allowed to run release rc or stable except release branch.
+          echo Only allow rc or stable on release branch.
+          exit 1
+      - name: Validate preid on dev branch
+        if: ${{ github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/dev' && github.event.inputs.preid != 'alpha' }}
+        run: |
+          echo Only allow alpha on dev branch.
           exit 1
       
       - uses: actions/checkout@v2
@@ -33,7 +38,7 @@ jobs:
           fetch-depth: 0
 
       - name: update templates alpha tag
-        if: ${{ github.event_name == 'schedule' }}
+        if: ${{ github.event.inputs.preid == 'alpha' }}
         uses: richardsimko/update-tag@v1
         with:
           tag_name: "v0.0.0-alpha"
@@ -41,7 +46,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: update template rc tag
-        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'rc' }}
+        if: ${{ github.event.inputs.preid == 'rc' }}
         uses: richardsimko/update-tag@v1
         with:
           tag_name: "v0.0.0-rc"
@@ -62,7 +67,7 @@ jobs:
         run: .github/scripts/sample-zip.sh ${{ runner.temp }}/teamsfx_samples
       
       - name: release sample' alpha version to github
-        if: ${{ github.event_name == 'schedule' }}
+        if: ${{ github.event.inputs.preid == 'alpha' }}
         uses: ncipollo/release-action@v1.10.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -73,7 +78,7 @@ jobs:
           removeArtifacts: true
 
       - name: release templates' RC version to github
-        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'rc' }}
+        if: ${{ github.event.inputs.preid == 'rc' }}
         uses: ncipollo/release-action@v1.10.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -84,7 +89,7 @@ jobs:
           removeArtifacts: true
       
       - name: release sample new version on github
-        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'stable' }}
+        if: ${{ github.event.inputs.preid == 'stable' }}
         uses: ncipollo/release-action@v1.10.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -92,11 +97,11 @@ jobs:
           artifacts: ${{ runner.temp }}/teamsfx_samples/*.zip
       
       - name: generate tag list
-        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'stable' }}
+        if: ${{ github.event.inputs.preid == 'stable' }}
         run: git tag | grep v > ${{ runner.temp }}/sample-tags.txt
 
       - name: update sample tag list release
-        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'stable' }}
+        if: ${{ github.event.inputs.preid == 'stable' }}
         uses: ncipollo/release-action@v1.10.0
         with:
           artifacts: ${{ runner.temp }}/sample-tags.txt
