--- a/command-bot-with-sso/bot/package.json
+++ b/command-bot-with-sso/bot/package.json
@@ -18,7 +18,7 @@
         "url": "https://github.com"
     },
     "dependencies": {
-        "@microsoft/teamsfx": "^1.2.0-rc.0",
+        "@microsoft/teamsfx": "^2.0.0",
         "botbuilder": "^4.15.0",
         "isomorphic-fetch": "^3.0.0",
         "restify": "^8.5.1"
