--- a/graph-connector-app/tabs/package.json
+++ b/graph-connector-app/tabs/package.json
@@ -6,9 +6,9 @@
         "@fluentui/react-northstar": "^0.62.0",
         "@microsoft/microsoft-graph-client": "^3.0.1",
         "@microsoft/teams-js": "^2.2.0",
-        "@microsoft/teamsfx": "2.0.0-beta.0",
+        "@microsoft/teamsfx": "^2.0.0",
+        "@microsoft/teamsfx-react": "^2.0.0",
         "axios": "^0.21.1",
-        "msteams-react-base-component": "^4.0.1",
         "react": "^16.14.0",
         "react-dom": "^16.14.0",
         "react-router-dom": "^5.1.2",
