--- a/graph-toolkit-contact-exporter/tabs/package.json
+++ b/graph-toolkit-contact-exporter/tabs/package.json
@@ -9,7 +9,7 @@
     "@microsoft/mgt": "2.4.1-next.teamsfx.8d56785",
     "@microsoft/mgt-teamsfx-provider": "2.4.1-next.teamsfx.8d56785",
     "@microsoft/teams-js": "^2.2.0",
-    "@microsoft/teamsfx": "2.0.0-beta.0",
+    "@microsoft/teamsfx": "^2.0.0",
     "axios": "^0.21.1",
     "react": "^16.13.1",
     "react-csv": "^2.0.3",
