--- a/todo-list-with-Azure-backend/tabs/package.json
+++ b/todo-list-with-Azure-backend/tabs/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@fluentui/react-northstar": "^0.62.0",
     "@microsoft/teams-js": "^2.2.0",
-    "@microsoft/teamsfx": "2.0.0-beta.0",
+    "@microsoft/teamsfx": "^2.0.0",
     "axios": "^0.21.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
