--- a/graph-connector-app/tabs/package.json
+++ b/graph-connector-app/tabs/package.json
@@ -4,6 +4,8 @@
     "private": true,
     "dependencies": {
         "@fluentui/react-northstar": "^0.62.0",
+        "@microsoft/mgt-element": "^2.6.2",
+        "@microsoft/mgt-teamsfx-provider": "^2.6.2",
         "@microsoft/microsoft-graph-client": "^3.0.1",
         "@microsoft/teams-js": "^2.2.0",
         "@microsoft/teamsfx": "^2.0.0",
