--- a/graph-toolkit-contact-exporter/tabs/package.json
+++ b/graph-toolkit-contact-exporter/tabs/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "dependencies": {
     "@fluentui/react-northstar": "^0.62.0",
-    "@microsoft/mgt-element": "2.4.1-next.teamsfx.8d56785",
-    "@microsoft/mgt-react": "2.4.1-next.teamsfx.8d56785",
-    "@microsoft/mgt": "2.4.1-next.teamsfx.8d56785",
-    "@microsoft/mgt-teamsfx-provider": "2.4.1-next.teamsfx.8d56785",
+    "@microsoft/mgt-element": "^2.6.2",
+    "@microsoft/mgt-react": "^2.6.2",
+    "@microsoft/mgt": "^2.6.2",
+    "@microsoft/mgt-teamsfx-provider": "^2.6.2",
     "@microsoft/teams-js": "^2.2.0",
     "@microsoft/teamsfx": "^2.0.0",
     "axios": "^0.21.1",
