--- a/hello-world-tab/tabs/package.json
+++ b/hello-world-tab/tabs/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "dependencies": {
     "@fluentui/react-northstar": "^0.62.0",
-    "@microsoft/mgt-element": "2.4.1-next.teamsfx.8d56785",
-    "@microsoft/mgt-react": "2.4.1-next.teamsfx.8d56785",
-    "@microsoft/mgt-teamsfx-provider": "2.4.1-next.teamsfx.8d56785",
+    "@microsoft/mgt-element": "^2.6.2",
+    "@microsoft/mgt-react": "^2.6.2",
+    "@microsoft/mgt-teamsfx-provider": "^2.6.2",
     "@microsoft/microsoft-graph-client": "^3.0.1",
     "@microsoft/teams-js": "^2.2.0",
     "@microsoft/teamsfx": "^2.0.0",
-    "@microsoft/teamsfx-react": "2.0.0",
+    "@microsoft/teamsfx-react": "^2.0.0",
     "axios": "^0.21.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
