feat: update sample name

--- a/graph-toolkit-one-productivity-hub/package.json
+++ b/graph-toolkit-one-productivity-hub/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "OneProductivityHub",
+    "name": "one-productivity-hub",
     "version": "0.0.1",
     "description": "",
     "author": "",
