--- a/query-org-user-with-message-extension-sso/package.json
+++ b/query-org-user-with-message-extension-sso/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "QueryOrgUserWithMESSO",
+    "name": "query-org-user-with-me-sso",
     "version": "0.0.1",
     "description": "",
     "author": "",
