--- a/query-org-user-with-message-extension-sso/bot/package.json
+++ b/query-org-user-with-message-extension-sso/bot/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "QueryOrgUserWithMESSO",
+  "name": "query-org-user-with-me-sso",
   "version": "1.0.0",
   "description": "Microsoft Teams Toolkit hello world Bot sample",
   "author": "Microsoft",
