feat: update samples to use TeamsFx and TeamsFx-React V2 (#524)
* feat: update package.json

* feat: update auth-end.html and App

* feat: update connector app

* feat: update graph connector app

* feat: update package.json

* feat: update sample name

* Update OneProductivityHubAspNetCore.csproj

* Update TeamsJsBlazorInterop.js

* Update TeamsJsBlazorInterop.js

* feat: revert auth-end.html to align with templates

* chore: update graph connector app

--- a/query-org-user-with-message-extension-sso/bot/package.json
+++ b/query-org-user-with-message-extension-sso/bot/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "QueryOrgUserWithMESSO",
+  "name": "query-org-user-with-me-sso",
   "version": "1.0.0",
   "description": "Microsoft Teams Toolkit hello world Bot sample",
   "author": "Microsoft",
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "@microsoft/microsoft-graph-client": "^3.0.2",
-    "@microsoft/teamsfx": "^1.2.0",
+    "@microsoft/teamsfx": "^2.0.0",
     "botbuilder": ">=4.15.0 <5.0.0",
     "isomorphic-fetch": "^3.0.0",
     "restify": "^8.5.1"
