--- a/graph-toolkit-one-productivity-hub/tabs/package.json
+++ b/graph-toolkit-one-productivity-hub/tabs/package.json
@@ -5,18 +5,18 @@
     "dependencies": {
         "@fluentui/react-northstar": "^0.62.0",
         "@microsoft/teams-js": "^2.2.0",
-        "@microsoft/teamsfx": "2.0.0-beta.0",
+        "@microsoft/teamsfx": "^2.0.0",
+        "@microsoft/teamsfx-react": "^2.0.0",
         "axios": "^0.21.1",
-        "msteams-react-base-component": "^4.0.1",
         "nth-check": "^2.0.1",
         "react": "^16.14.0",
         "react-dom": "^16.14.0",
         "react-router-dom": "^5.1.2",
         "react-scripts": "^5.0.1",
-        "@microsoft/mgt": "2.4.1-next.teamsfx.8d56785",
-        "@microsoft/mgt-element": "2.4.1-next.teamsfx.8d56785",
-        "@microsoft/mgt-react": "2.4.1-next.teamsfx.8d56785",
-        "@microsoft/mgt-teamsfx-provider": "2.4.1-next.teamsfx.8d56785",
+        "@microsoft/mgt": "^2.6.2",
+        "@microsoft/mgt-element": "^2.6.2",
+        "@microsoft/mgt-react": "^2.6.2",
+        "@microsoft/mgt-teamsfx-provider": "^2.6.2",
         "react-csv": "^2.2.2"
     },
     "devDependencies": {
