--- a/teams-videoapp-sample/app/package.json
+++ b/teams-videoapp-sample/app/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev:teamsfx": "env-cmd --silent -f .env.teamsfx.local npm run start",
+    "dev:teamsfx": "env-cmd --silent -f .env.teamsfx.local npm run dev",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
