--- a/graph-connector-bot/bot/package.json
+++ b/graph-connector-bot/bot/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/node": "^18.11.9",
     "@types/restify": "8.4.2",
     "env-cmd": "^10.1.0",
     "nodemon": "^2.0.7",
