--- a/teams-videoapp-sample/.fx/configs/projectSettings.json
+++ b/teams-videoapp-sample/.fx/configs/projectSettings.json
@@ -1,7 +1,7 @@
 {
     "appName": "teams-videoapp-sample",
-    "projectId": "29eb39c6-8ded-4777-8bee-569def8e2e7a",
     "version": "2.1.0",
+    "isFromSample": true,
     "programmingLanguage": "javascript",
     "components": []
 }
