--- a/hello-world-tab/.gitignore
+++ b/hello-world-tab/.gitignore
@@ -1,11 +1,15 @@
-node_modules
-.fx/configs/localSettings.json
-.fx/states/*.userdata
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
 .DS_Store
-.archive
-.archive.log
-.env.teamsfx.local
-subscriptionInfo.json
-build
-.fx/configs/config.local.json
-.fx/states/state.local.json
+.env*.local
+.deployment
