--- a/NPM-search-connector-M365/package.json
+++ b/NPM-search-connector-M365/package.json
@@ -1,13 +1,26 @@
 {
-    "name": "npm-search-connector",
-    "version": "0.0.1",
-    "description": "",
-    "author": "",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "devDependencies": {
-        "@microsoft/teamsfx-cli": "1.*"
-    },
-    "license": "MIT"
+  "name": "teams-messaging-extension",
+  "version": "1.0.0",
+  "msteams": {
+    "teamsAppId": null
+  },
+  "description": "Microsoft Teams message extension quickstart",
+  "author": "Microsoft",
+  "license": "MIT",
+  "main": "index.js",
+  "scripts": {
+    "dev": "nodemon --inspect=9239 --signal SIGINT ./index.js",
+    "start": "node ./index.js",
+    "watch": "nodemon ./index.js"
+  },
+  "dependencies": {
+    "axios": "^0.21.1",
+    "botbuilder": "~4.14.0",
+    "express": "~4.17.1",
+    "html-entities": "^1.3.1"
+  },
+  "devDependencies": {
+    "@microsoft/teamsfx-run-utils": "alpha",
+    "nodemon": "^2.0.7"
+  }
 }
