--- a/hello-world-bot/.gitignore
+++ b/hello-world-bot/.gitignore
@@ -1,10 +1,10 @@
-# TeamsFx files
-node_modules
-.fx/configs/localSettings.json
-.fx/states/*.userdata
+# dependencies
+node_modules/
+
+# misc
+.env
+.deployment
 .DS_Store
-.env.teamsfx.local
-subscriptionInfo.json
-build
-.fx/configs/config.local.json
-.fx/states/state.local.json
+
+# build
+lib/
