--- a/hello-world-tab/.gitignore
+++ b/hello-world-tab/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# TeamsFx files
+teamsfx/.env.*
+
 # dependencies
 /node_modules
 
