chore: remove package-lock.json

--- a/NPM-search-connector-M365/appPackage/manifest.template.json
+++ b/NPM-search-connector-M365/appPackage/manifest.template.json
@@ -15,7 +15,7 @@
         "outline": "resources/outline.png"
     },
     "name": {
-        "short": "MynpmSearchConnector",
+        "short": "npmSearchConnector",
         "full": "full name for npmSearchConnector"
     },
     "description": {
