chore: update todo list m365 to v3
- update debug related files

--- a/todo-list-with-Azure-backend-M365/.vscode/settings.json
+++ b/todo-list-with-Azure-backend-M365/.vscode/settings.json
@@ -3,4 +3,12 @@
     "azureFunctions.showProjectWarning": false,
     "csharp.suppressDotnetRestoreNotification": true,
     "debug.onTaskErrors": "abort",
+    "json.schemas": [
+        {
+            "fileMatch": [
+                "/aad.*.json"
+            ],
+            "schema": {}
+        }
+    ]
 }
