--- a/todo-list-with-Azure-backend-M365/.vscode/launch.json
+++ b/todo-list-with-Azure-backend-M365/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "Attach to Frontend in Teams (Edge)",
             "type": "pwa-msedge",
             "request": "launch",
-            "url": "https://teams.microsoft.com/l/app/${localTeamsAppId}?installAppPackage=true&webjoin=true&${account-hint}",
+            "url": "https://teams.microsoft.com/l/app/${local:teamsAppId}?installAppPackage=true&webjoin=true&${account-hint}",
             "cascadeTerminateToConfigurations": [
                 "Attach to Backend"
             ],
@@ -19,7 +19,7 @@
             "name": "Attach to Frontend in Teams (Chrome)",
             "type": "pwa-chrome",
             "request": "launch",
-            "url": "https://teams.microsoft.com/l/app/${localTeamsAppId}?installAppPackage=true&webjoin=true&${account-hint}",
+            "url": "https://teams.microsoft.com/l/app/${local:teamsAppId}?installAppPackage=true&webjoin=true&${account-hint}",
             "cascadeTerminateToConfigurations": [
                 "Attach to Backend"
             ],
@@ -33,7 +33,7 @@
             "name": "Attach to Frontend in Outlook (Edge)",
             "type": "pwa-msedge",
             "request": "launch",
-            "url": "https://outlook.office.com/host/${localTeamsAppInternalId}?${account-hint}",
+            "url": "https://outlook.office.com/host/${local:teamsAppInternalId}?${account-hint}",
             "cascadeTerminateToConfigurations": [
                 "Attach to Backend"
             ],
@@ -47,7 +47,7 @@
             "name": "Attach to Frontend in Outlook (Chrome)",
             "type": "pwa-chrome",
             "request": "launch",
-            "url": "https://outlook.office.com/host/${localTeamsAppInternalId}?${account-hint}",
+            "url": "https://outlook.office.com/host/${local:teamsAppInternalId}?${account-hint}",
             "cascadeTerminateToConfigurations": [
                 "Attach to Backend"
             ],
@@ -61,7 +61,7 @@
             "name": "Attach to Frontend in Office (Edge)",
             "type": "pwa-msedge",
             "request": "launch",
-            "url": "https://www.office.com/m365apps/${localTeamsAppInternalId}?auth=2&${account-hint}",
+            "url": "https://www.office.com/m365apps/${local:teamsAppInternalId}?auth=2&${account-hint}",
             "cascadeTerminateToConfigurations": [
                 "Attach to Backend"
             ],
@@ -75,7 +75,7 @@
             "name": "Attach to Frontend in Office (Chrome)",
             "type": "pwa-chrome",
             "request": "launch",
-            "url": "https://www.office.com/m365apps/${localTeamsAppInternalId}?auth=2&${account-hint}",
+            "url": "https://www.office.com/m365apps/${local:teamsAppInternalId}?auth=2&${account-hint}",
             "cascadeTerminateToConfigurations": [
                 "Attach to Backend"
             ],
