--- a/todo-list-with-Azure-backend-M365/.vscode/tasks.json
+++ b/todo-list-with-Azure-backend-M365/.vscode/tasks.json
@@ -7,11 +7,9 @@
         {
             "label": "Start Teams App Locally",
             "dependsOn": [
-                "Validate & install prerequisites",
-                "Install npm packages",
-                "Set up tab",
-                "Set up SSO",
-                "Build & upload Teams manifest",
+                "Validate prerequisites",
+                "Create resources",
+                "Set up local projects",
                 "Start services"
             ],
             "dependsOrder": "sequence"
@@ -19,11 +17,9 @@
         {
             "label": "Start Teams App Locally & Install App",
             "dependsOn": [
-                "Validate & install prerequisites",
-                "Install npm packages",
-                "Set up tab",
-                "Set up SSO",
-                "Build & upload Teams manifest",
+                "Validate prerequisites",
+                "Create resources",
+                "Set up local projects",
                 "Start services",
                 "Install app in Teams"
             ],
@@ -32,16 +28,13 @@
         {
             // Check if all required prerequisites are installed and will install them if not.
             // See https://aka.ms/teamsfx-check-prerequisites-task to know the details and how to customize the args.
-            "label": "Validate & install prerequisites",
+            "label": "Validate prerequisites",
             "type": "teamsfx",
             "command": "debug-check-prerequisites",
             "args": {
                 "prerequisites": [
                     "nodejs", // Validate if Node.js is installed.
                     "m365Account", // Sign-in prompt for Microsoft 365 account, then validate if the account enables the sideloading permission.
-                    "devCert", // Install localhost SSL certificate. It's used to serve the development sites over HTTPS to debug the Tab app in Teams.
-                    "func", // Install Azure Functions Core Tools. It's used to serve Azure Functions hosted project locally.
-                    "dotnet", // Ensure .NET Core SDK is installed. TeamsFx Azure Functions project depends on extra .NET binding extensions for HTTP trigger authorization.
                     "portOccupancy" // Validate available ports to ensure those debug ones are not occupied.
                 ],
                 "portOccupancy": [
@@ -52,61 +45,21 @@
             }
         },
         {
-            // Check if all the npm packages are installed and will install them if not.
-            // See https://aka.ms/teamsfx-npm-package-task to know the details and how to customize the args.
-            "label": "Install npm packages",
+            "label": "Create resources",
             "type": "teamsfx",
-            "command": "debug-npm-install",
+            "command": "provision",
             "args": {
-                "projects": [
-                    {
-                        "cwd": "${workspaceFolder}/tabs",
-                        "npmInstallArgs": [
-                            "--no-audit"
-                        ]
-                    },
-                    {
-                        "cwd": "${workspaceFolder}/api",
-                        "npmInstallArgs": [
-                            "--no-audit"
-                        ]
-                    }
-                ]
+                "template": "${workspaceFolder}/teamsfx/app.local.yml",
+                "env": "local"
             }
         },
         {
-            // Prepare local launch information for Tab.
-            // See https://aka.ms/teamsfx-debug-set-up-tab-task to know the details and how to customize the args.
-            "label": "Set up tab",
+            "label": "Set up local projects",
             "type": "teamsfx",
-            "command": "debug-set-up-tab",
+            "command": "deploy",
             "args": {
-                "baseUrl": "https://localhost:53000"
-            }
-        },
-        {
-            // Register resources and prepare local launch information for SSO functionality.
-            // See https://aka.ms/teamsfx-debug-set-up-sso-task to know the details and how to customize the args.
-            "label": "Set up SSO",
-            "type": "teamsfx",
-            "command": "debug-set-up-sso",
-            "args": {
-                //// Enter your own AAD app information if using the existing AAD app. ////
-                // "objectId": "",
-                // "clientId": "",
-                // "clientSecret": "", // use plain text or environment variable reference like ${env:CLIENT_SECRET}
-                // "accessAsUserScopeId": "
-            }
-        },
-        {
-            // Build and upload Teams manifest.
-            // See https://aka.ms/teamsfx-debug-prepare-manifest-task to know the details and how to customize the args.
-            "label": "Build & upload Teams manifest",
-            "type": "teamsfx",
-            "command": "debug-prepare-manifest",
-            "args": {
-                //// Enter your own Teams app package path if using the existing Teams manifest. ////
-                // "appPackagePath": ""
+                "template": "${workspaceFolder}/teamsfx/app.local.yml",
+                "env": "local"
             }
         },
         {
@@ -119,10 +72,10 @@
         {
             "label": "Start frontend",
             "type": "shell",
-            "command": "npm run dev:teamsfx",
+            "command": "node teamsfx/script/run.tab.js . teamsfx/.env.local",
             "isBackground": true,
             "options": {
-                "cwd": "${workspaceFolder}/tabs"
+                "cwd": "${workspaceFolder}"
             },
             "problemMatcher": {
                 "pattern": {
@@ -141,10 +94,10 @@
         {
             "label": "Start backend",
             "type": "shell",
-            "command": "npm run dev:teamsfx",
+            "command": "node teamsfx/script/run.api.js . teamsfx/.env.local",
             "isBackground": true,
             "options": {
-                "cwd": "${workspaceFolder}/api",
+                "cwd": "${workspaceFolder}",
                 "env": {
                     "PATH": "${command:fx-extension.get-func-path}${env:PATH}"
                 }
@@ -161,27 +114,6 @@
                     "beginsPattern": "^.*(Job host stopped|signaling restart).*$",
                     "endsPattern": "^.*(Worker process started and initialized|Host lock lease acquired by instance ID).*$"
                 }
-            },
-            "presentation": {
-                "reveal": "silent"
-            },
-            "dependsOn": [
-                "Install Azure Functions binding extensions"
-            ]
-        },
-        {
-            // TeamsFx Azure Functions project depends on extra Azure Functions binding extensions for HTTP trigger authorization.
-            "label": "Install Azure Functions binding extensions",
-            "type": "shell",
-            "command": "dotnet build extensions.csproj -o ./bin --ignore-failed-sources",
-            "options": {
-                "cwd": "${workspaceFolder}/api",
-                "env": {
-                    "PATH": "${command:fx-extension.get-dotnet-path}${env:PATH}"
-                }
-            },
-            "presentation": {
-                "reveal": "silent"
             }
         },
         {
