--- a/todo-list-with-Azure-backend-M365/package.json
+++ b/todo-list-with-Azure-backend-M365/package.json
@@ -4,10 +4,16 @@
     "description": "",
     "author": "",
     "scripts": {
+        "install:api": "cd api && npm install",
+        "install:tab": "cd tab && npm install",
+        "install": "concurrently \"npm run install:api\" \"npm run install:tab\"",
+        "dev:api": "cd api && npm run dev",
+        "start:tab": "cd tab && npm run start",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "devDependencies": {
-        "@microsoft/teamsfx-cli": "1.*"
+        "@microsoft/teamsfx-run-utils": "alpha",
+        "concurrently": "^7.6.0"
     },
     "license": "MIT"
 }
