--- a/NPM-search-connector-M365/.gitignore
+++ b/NPM-search-connector-M365/.gitignore
@@ -1,11 +1,19 @@
-node_modules
-/.fx/*.env
-/.fx/*.userdata
-/.fx/subscriptionInfo.json
+# TeamsFx files
+teamsfx/.env.*
+
 .DS_Store
-/.fx/configs/localSettings.json
-/.fx/states/*.userdata
-**/.env.teamsfx.local
-.fx/configs/config.local.json
-.fx/states/state.local.json
 build
+
+# dependencies
+/node_modules
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env
+.deployment
