--- a/stocks-update-notification-bot/.gitignore
+++ b/stocks-update-notification-bot/.gitignore
@@ -1,10 +1,27 @@
 # TeamsFx files
+teamsfx/.env.*
+
+# Dependency directories
 node_modules
-.fx/configs/localSettings.json
-.fx/states/*.userdata
+
+# Azure Functions artifacts
+bin
+obj
+appsettings.json
+
+# ignore local.settings.json if it contains your own credentials
+# local.settings.json
+
+# misc
 .DS_Store
-.env.teamsfx.local
-subscriptionInfo.json
-build
-.fx/configs/config.local.json
-.fx/states/state.local.json
+.deployment
+.env
+
+# Azurite emulator
+_storage_emulator
+
+# Local data
+.notification.localstore.json
+
+# production
+/build
