--- a/stocks-update-notification-bot/teamsfx/.env.dev
+++ b/stocks-update-notification-bot/teamsfx/.env.dev
@@ -1,6 +1,6 @@
 # Built-in environment variables
 TEAMSFX_ENV=dev
-TEAMS_APP_NAME=stocks-update-notification-bot
+TEAMS_APP_NAME=stocks-update-notif-bot
 AZURE_SUBSCRIPTION_ID=
 AZURE_RESOURCE_GROUP_NAME=
 RESOURCE_SUFFIX=
@@ -12,3 +12,7 @@ TEAMS_APP_ID=
 BOT_AZURE_FUNCTION_APP_RESOURCE_ID=
 BOT_DOMAIN=
 BOT_FUNCTION_ENDPOINT=
+
+# Environment variables configured for the stocks update notification bot sample.
+TEAMSFX_API_ALPHAVANTAGE_ENDPOINT=
+TEAMSFX_API_ALPHAVANTAGE_API_KEY=
