--- a/stocks-update-notification-bot/package.json
+++ b/stocks-update-notification-bot/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "stocks-update-notification-bot",
+    "name": "stocks-update-notif-bot",
     "version": "1.0.0",
     "description": "Stocks Update Notification bot",
     "engines": {
@@ -12,7 +12,7 @@
         "dev": "func start --typescript --language-worker=\"--inspect=9239\" --port \"3978\" --cors \"*\"",
         "prepare-storage:teamsfx": "azurite --silent --location ./_storage_emulator --debug ./_storage_emulator/debug.log",
         "watch:teamsfx": "tsc --watch",
-        "build": "tsc && shx cp -r ./src/adaptiveCards ./dist",
+        "build": "tsc && shx cp -r ./src/adaptiveCards ./dist/src",
         "watch": "tsc -w",
         "prestart": "npm run build",
         "start": "npx func start",
@@ -25,7 +25,7 @@
     "dependencies": {
         "@microsoft/adaptivecards-tools": "^1.0.0",
         "@microsoft/teamsfx": "^2.0.0",
-        "botbuilder": "~4.15.0",
+        "botbuilder": "^4.17.0",
         "lodash": "^4.17.21"
     },
     "devDependencies": {
@@ -34,7 +34,7 @@
         "@types/lodash": "^4.14.182",
         "azurite": "^3.16.0",
         "shx": "^0.3.4",
-        "ts-node": "~9.1.1",
-        "typescript": "~3.9.2"
+        "ts-node": "^10.4.0",
+        "typescript": "^4.4.4"
     }
 }
