--- a/stocks-update-notification-bot/teamsfx/app.local.yml
+++ b/stocks-update-notification-bot/teamsfx/app.local.yml
@@ -3,14 +3,14 @@ version: 1.0.0
 registerApp:
   - uses: teamsApp/create # Creates a Teams app
     with:
-      name: stocks-update-notification-bot # Teams app name
+      name: stocks-update-notif-bot # Teams app name
     # Output: following environment variable will be persisted in current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
 
 provision:
   - uses: botAadApp/create # Creates a new AAD app for bot if BOT_ID environment variable is empty
     with:
-      name: stocks-update-notification-bot
+      name: stocks-update-notif-bot
     # Output: following environment variable will be persisted in current environment's .env file.
     # BOT_ID: the AAD app client id created for bot
     # SECRET_BOT_PASSWORD: the AAD app client secret created for bot
@@ -18,7 +18,7 @@ provision:
   - uses: botFramework/createOrUpdateBot # Create or update the bot registration on dev.botframework.com
     with:
       botId: ${{BOT_ID}}
-      name: stocks-update-notification-bot
+      name: stocks-update-notif-bot
       messagingEndpoint: ${{BOT_ENDPOINT}}/api/messages
       description: ""
 
