chore: update azure.parameters.jsonazure.parameters.json

--- a/stocks-update-notification-bot-dotnet/StocksUpdateNotificationBot/appsettings.json
+++ b/stocks-update-notification-bot-dotnet/StocksUpdateNotificationBot/appsettings.json
@@ -1,2 +1,5 @@
 {
+
+    "TEAMSFX_API_ALPHAVANTAGE_ENDPOINT": "https://www.alphavantage.co",
+    "TEAMSFX_API_ALPHAVANTAGE_API_KEY": "<your-api-key>"
 }
