--- a/stocks-update-notification-bot-dotnet/StocksUpdateNotificationBot/StocksUpdateNotificationBot.csproj
+++ b/stocks-update-notification-bot-dotnet/StocksUpdateNotificationBot/StocksUpdateNotificationBot.csproj
@@ -1,17 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <RuntimeFrameworkVersion>6.0.10</RuntimeFrameworkVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <AzureFunctionsVersion>v4</AzureFunctionsVersion>
   </PropertyGroup>
-
+ 
   <ItemGroup>
     <ProjectCapability Include="TeamsFx" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Include=".fx/**/*" />
     <None Remove="build/**/*" />
     <Content Remove="build/**/*" />
   </ItemGroup>
@@ -21,13 +21,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AdaptiveCards.Templating" Version="1.2.2" />
+    <PackageReference Include="AdaptiveCards.Templating" Version="1.3.1" />
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
-    <PackageReference Include="Microsoft.Bot.Builder" Version="4.16.0" />
-    <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.16.0" />
+    <PackageReference Include="Microsoft.Bot.Builder" Version="4.17.2" />
+    <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.17.2" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.0.1" />
-    <PackageReference Include="Microsoft.TeamsFx" Version="1.0.0">
+    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.1.3" />
+    <PackageReference Include="Microsoft.TeamsFx" Version="1.1.0">
       <!-- Exclude TeamsFx wwwroot static files which are for frontend only. -->
       <ExcludeAssets>contentFiles</ExcludeAssets>
     </PackageReference>
