--- a/bot-sso/tsconfig.json
+++ b/bot-sso/tsconfig.json
@@ -8,5 +8,7 @@
     "sourceMap": true,
     "incremental": true,
     "tsBuildInfoFile": "./lib/.tsbuildinfo",
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
   }
 }
