--- a/bot-sso/package.json
+++ b/bot-sso/package.json
@@ -1,13 +1,39 @@
 {
-    "name": "sso-bot-sample",
-    "version": "0.0.1",
-    "description": "",
-    "author": "",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "devDependencies": {
-        "@microsoft/teamsfx-cli": "1.*"
-    },
-    "license": "MIT"
+  "name": "sso-bot-sample",
+  "version": "1.0.0",
+  "description": "Microsoft Teams Toolkit sso bot sample",
+  "author": "Microsoft",
+  "license": "MIT",
+  "main": "./lib/index.js",
+  "scripts": {
+    "dev": "nodemon --exec node --inspect=9239 --signal SIGINT -r ts-node/register ./index.ts",
+    "build": "tsc --build && shx cp -r ./adaptiveCards ./lib/",
+    "start": "node ./lib/index.js",
+    "watch": "nodemon --exec \"npm run start\"",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com"
+  },
+  "dependencies": {
+    "@azure/msal-node": "^1.1.0",
+    "@microsoft/microsoft-graph-client": "^3.0.1",
+    "@microsoft/teamsfx": "^2.0.0",
+    "adaptive-expressions": "^4.15.0",
+    "adaptivecards-templating": "2.1.0",
+    "botbuilder": "^4.15.0",
+    "botbuilder-dialogs": "^4.15.0",
+    "isomorphic-fetch": "^3.0.0",
+    "restify": "^8.5.1",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@microsoft/teamsfx-run-utils": "alpha",
+    "@types/restify": "8.4.2",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.4.4",
+    "nodemon": "^2.0.7",
+    "shx": "^0.3.3"
+  }
 }
